objects/Digital_Support_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_Industry__c</fullName>
        <formula>Account__r.SIC_and_Industry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Digital Support Requests</relationshipLabel>
        <relationshipName>Digital_Support_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Notes_or_Information__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Notes or Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Background_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Background Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Current_Product_Profile__c</fullName>
        <label>Current Product Profile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group Health Insurance</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSR_Email_Notification__c</fullName>
        <formula>&quot;Account Information:&quot; &amp; BR() &amp;
   Account__r.Name &amp; BR() &amp;
   Opportunity__r.Name &amp; BR() &amp;
   Industry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSR Email Notification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Meeting__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deliverable_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Deliverable Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incumbent_Provider__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Incumbent Provider</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Industry</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Closed__c</fullName>
        <formula>IF( Opportunity__r.IsClosed = true, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Is Closed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Meeting__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>City | State</inlineHelpText>
        <label>Location of Meeting</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multimedia_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multimedia Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Digital Support Requests</relationshipLabel>
        <relationshipName>Digital_Support_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Potential_Opportunity_Size__c</fullName>
        <label>Potential Opportunity Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFP_Proposal_Team__c</fullName>
        <label>RFP / Proposal Team Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Digital_Support_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_Assignment_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resource Assignment Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specific_Capabilities_Discussed_for_RFP__c</fullName>
        <description>Has there already been a determination of specific capabilities for this RFP/RFI response?</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Specific Capabilities Discussed for RFP</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Specific_Needs_or_Solutions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Specific Needs or Solutions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Resources Assigned</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <isActive>false</isActive>
                    <label>Completed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Summary_of_Primary_Ask__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Summary of Primary Ask</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type_of_Support_Provided__c</fullName>
        <label>Type of Support Provided</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Content Development (e.g. PowerPoint slides, responses to RFP/RFIquestions)</fullName>
                </value>
                <value>
                    <fullName>Demo (e.g. Sydney Demo)</fullName>
                </value>
                <value>
                    <fullName>Live Meeting Attendance (e.g. request for digital leader to attend meeting)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Support_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type of Support Requested</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_are_client_areas_of_interest__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>What Are Client Areas of Interest</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>What_does_data_tell_us_about_pain_points__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>What Data Tell Us About Pain Points</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Digital Support Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Closed_Digital_Support_Requests</fullName>
        <columns>NAME</columns>
        <columns>Requestor__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Stage__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Resources Assigned</value>
        </filters>
        <label>Closed Digital Support Requests</label>
    </listViews>
    <listViews>
        <fullName>Open_Digital_Support_Requests</fullName>
        <columns>NAME</columns>
        <columns>Requestor__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Stage__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Open Digital Support Requests</label>
    </listViews>
    <nameField>
        <displayFormat>DSR-{00000}</displayFormat>
        <label>Digital Support Request (DSR)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digital Support Requests</pluralLabel>
    <recordTypes>
        <fullName>Customer_Meeting</fullName>
        <active>true</active>
        <label>Customer Meeting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Demo_Support</fullName>
        <active>true</active>
        <label>Demo Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect_Meeting</fullName>
        <active>true</active>
        <label>Prospect Meeting</label>
    </recordTypes>
    <recordTypes>
        <fullName>RFP</fullName>
        <active>true</active>
        <description>Request for Proposal</description>
        <label>RFP</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>